# CUI-Calclator

./: .gitignore  LICENSE.txt  Readme.md
.github/workflows/: CI.yml
src/: CMakeLists.txt  Makefile  calc.c
